--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img id="ImgFirst" src="" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block fundo">
+              <div class="carousel-caption d-none d-md-block ">
                 <h5 id="TFirst" class="black">First slide label</h5>
                 <p id="LFirst" class="black">Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img id="ImgSecond" src="" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block fundo">
+              <div class="carousel-caption d-none d-md-block ">
                 <h5 id="TSecond" class="black">Second slide label</h5>
                 <p id="LSecond" class="black">Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img id="ImgThird"  src="" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block fundo">
+              <div class="carousel-caption d-none d-md-block ">
                 <h5 id="TThird" class="black">Third slide label</h5>
                 <p id="LThird" class="black">Some representative placeholder content for the third slide.</p>
               </div>
