--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light cor">
       <div class="container-fluid menu">
         <a class="navbar-brand" href="#Main"><p class="menup">Home</p></a>
         <a class="navbar-brand" href="#Noticias"><p class="menup">Notícias</p></a>
